# Generated by Django 5.2.4 on 2025-07-11 05:22

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('bloodrequests', '0001_initial'),
        ('bloodstock', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Matcher',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('quantity_allocated', models.PositiveIntegerField(default=0)),
                ('request_id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='matchers', to='bloodrequests.bloodrequests')),
                ('stock_id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='matchers', to='bloodstock.stock')),
            ],
        ),
    ]
