# Generated by Django 5.2.4 on 2025-07-11 05:22

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('donation', '0001_initial'),
        ('donor', '0002_donor_blood_type_donor_can_donate_donor_national_id_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('message', models.TextField()),
                ('status', models.BooleanField(default=False, help_text='True = Read, False = Unread')),
                ('sent_at', models.DateTimeField(auto_now_add=True)),
                ('via_email', models.BooleanField(default=False, help_text='True = Sent via Email, False = Not Sent')),
                ('donation', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='notifications', to='donation.donation')),
                ('donor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='notifications', to='donor.donor')),
            ],
        ),
    ]
